feat: criado nova rota para remover integracao de usuario.
